Source/WebCore/platform/mac/ScrollAnimatorMac.mm
@@ -69,6 +69,8 @@ using WebCore::VerticalScrollbar;
 using WebCore::macScrollbarTheme;
 using WebCore::IntRect;
 using WebCore::ThumbPart;
+using WebCore::CubicBezierTimingFunction;
+
 @interface NSObject (ScrollAnimationHelperDetails)
 - (id)initWithDelegate:(id)delegate;
 - (void)_stopRun;
@@ -284,31 +286,55 @@ enum FeatureToAnimate {
     ExpansionTransition
 };
 
+#if __MAC_OS_X_VERSION_MIN_REQUIRED < 101400
 @interface WebScrollbarPartAnimation : NSAnimation
+#else
+@interface WebScrollbarPartAnimation : NSObject
+#endif
 {
     Scrollbar* _scrollbar;
     RetainPtr<NSScrollerImp> _scrollerImp;
     FeatureToAnimate _featureToAnimate;
     CGFloat _startValue;
     CGFloat _endValue;
+#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 101400
+    NSTimeInterval _duration;
+    RetainPtr<NSTimer> _timer;
+    RetainPtr<NSDate> _startDate;
+    RefPtr<CubicBezierTimingFunction> _timingFunction;
+#endif
 }
 - (id)initWithScrollbar:(Scrollbar*)scrollbar featureToAnimate:(FeatureToAnimate)featureToAnimate animateFrom:(CGFloat)startValue animateTo:(CGFloat)endValue duration:(NSTimeInterval)duration;
+#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 101400
+- (void)setCurrentProgress:(NSTimer *)timer;
+- (void)setDuration:(NSTimeInterval)duration;
+- (void)stopAnimation;
+#endif
 @end
 
 @implementation WebScrollbarPartAnimation
 
 - (id)initWithScrollbar:(Scrollbar*)scrollbar featureToAnimate:(FeatureToAnimate)featureToAnimate animateFrom:(CGFloat)startValue animateTo:(CGFloat)endValue duration:(NSTimeInterval)duration
 {
+#if __MAC_OS_X_VERSION_MIN_REQUIRED < 101400
     self = [super initWithDuration:duration animationCurve:NSAnimationEaseInOut];
     if (!self)
         return nil;
+#else
+    const NSTimeInterval timeInterval = 0.01;
+    _timer = adoptNS([[NSTimer alloc] initWithFireDate:[NSDate dateWithTimeIntervalSinceNow:0] interval:timeInterval target:self selector:@selector(setCurrentProgress:) userInfo:nil repeats:YES]);
+    _duration = duration;
+    _timingFunction = CubicBezierTimingFunction::create(CubicBezierTimingFunction::EaseInOut);
+#endif
 
     _scrollbar = scrollbar;
     _featureToAnimate = featureToAnimate;
     _startValue = startValue;
     _endValue = endValue;
 
+#if __MAC_OS_X_VERSION_MIN_REQUIRED < 101400
     [self setAnimationBlockingMode:NSAnimationNonblocking];
+#endif
 
     return self;
 }
@@ -319,7 +345,12 @@ enum FeatureToAnimate {
 
     _scrollerImp = scrollerImpForScrollbar(*_scrollbar);
 
+#if __MAC_OS_X_VERSION_MIN_REQUIRED < 101400
     [super startAnimation];
+#else
+    [[NSRunLoop mainRunLoop] addTimer:_timer.get() forMode:NSDefaultRunLoopMode];
+    _startDate = adoptNS([[NSDate alloc] initWithTimeIntervalSinceNow:0]);
+#endif
 }
 
 - (void)setStartValue:(CGFloat)startValue
@@ -332,10 +363,28 @@ enum FeatureToAnimate {
     _endValue = endValue;
 }
 
+#if __MAC_OS_X_VERSION_MIN_REQUIRED < 101400
 - (void)setCurrentProgress:(NSAnimationProgress)progress
+#else
+- (void)setCurrentProgress:(NSTimer *)timer
+#endif
 {
+#if __MAC_OS_X_VERSION_MIN_REQUIRED < 101400
     [super setCurrentProgress:progress];
-
+#else
+    CGFloat progress = 0;
+    NSDate *now = [NSDate dateWithTimeIntervalSinceNow:0];
+    NSTimeInterval elapsed = [now timeIntervalSinceDate:_startDate.get()];
+    if (elapsed > _duration) {
+        progress = 1;
+        [timer invalidate];
+    } else {
+        NSTimeInterval t = 1;
+        if (_duration)
+            t = elapsed / _duration;
+        progress = _timingFunction->transformTime(t, _duration);
+    }
+#endif
     ASSERT(_scrollbar);
 
     CGFloat currentValue;
@@ -370,6 +419,18 @@ enum FeatureToAnimate {
     END_BLOCK_OBJC_EXCEPTIONS;
     _scrollbar = 0;
 }
+
+#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 101400
+- (void)setDuration:(NSTimeInterval)duration
+{
+    _duration = duration;
+}
+
+- (void)stopAnimation
+{
+    [_timer invalidate];
+}
+#endif
 
 @end
 
